Unicorn AB.css
/*
* {
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
}
*/

.background {
    background: url(https://i.imgur.com/5lLdMft.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

/***********************************************************************
***                      Meny formatering                            ***
***********************************************************************/

.menulist {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #111;
    position: fixed;
    top: 0;
    width: 100%;
    text-align: center;
}
  
li {
    display: inline-block;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover:not(.active) {
    background-color: #333;
}

.active {
    background-color: #8a009d;
}

/***********************************************************************
***                      Text formatering                            ***
***********************************************************************/

.Huvudrubrik {
    /*font : 4em "Nodesto Caps";*/
    font: 4em "Raider Crusader";
    margin: auto;
    text-align: center;
    color: white;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: black;
}

.underrubrik {
    /*font: 3em "Mr. Eaves Small Caps";
    font: 3em "Bookinsanity";*/
    font: 3em "Raider Crusader";
    color: white;
    text-align: center;
    margin:auto;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
}

.textcol {
    float: left;
    padding-left: 5%;
    padding-right: 5%;
    width: 40%;
}

.colBg {
    background-color: rgba(112,128,144, 0.9);
	opacity: 1;
    margin: 4%;
    border-radius: 25px;
    border: 1px solid black;
    padding: 2%;
}	

.paragrafer {
    font: 1em "Bookinsanity";
    margin: auto;
    text-align: center;
}

.paragrafBg {
    border: 1px solid black;
    background-color: rgba(112,128,144, 0.9);
    padding: 2%;
    margin-left: 30%;
    margin-right: 30%;
    margin-bottom: 4%;
    border-radius: 25px;
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

/***********************************************************************
***                 iframe och bildformatering                       ***
***********************************************************************/
.imgcenter {
    text-align: center;
}

img {
    display: inline-block;
    margin-top:3%;
    margin-bottom: 1%;

}

iframe {
    margin-left: auto;   
    margin-right: auto;
    display: block;
    border: 6px solid lightgrey;
    background-color: rgba(112,128,144, 0.9);
    padding: 1%;
}

